hphp/hack/test/typecheck/is_expression/invalid_hint_class_with_generics.php
<?hh // strict

final class C<T> {}

function foo(mixed $x): bool {
  return $x is C<int>;
}
